--- a/salikneta/templates/salikneta/home.html
+++ b/salikneta/templates/salikneta/home.html
@@ -38,7 +38,7 @@
                     <div class="twitter-panel pn">
                       <i class="fa fa-shopping-basket fa-4x"></i>
                       <h4 class="mt" style="color: white">Items</h4>
-                        <a href="{% url 'manageItems' %}"><button class="btn btn-small">Navigate</button></a>
+                        <a href="{% url 'manageItems' 1 %}"><button class="btn btn-small">Navigate</button></a>
                     </div>
                   </div>
                   <div class="col-md-4 mb">
