--- a/salikneta/templates/salikneta/includes/header.html
+++ b/salikneta/templates/salikneta/includes/header.html
@@ -144,7 +144,7 @@
                item +='<br><span class="small italic">'+obj[i].timestamp+'</span></a></li>';
                $("#notif_list").append(item);
            }
-               $("#notif_list").append('<li><a href="index.html#">See all notifications</a></li>');
+               $("#notif_list").append('<li><a href="salikneta/notifications/">See all notifications</a></li>');
 
         });
     }
