--- a/salikneta/templates/salikneta/includes/manager_header.html
+++ b/salikneta/templates/salikneta/includes/manager_header.html
@@ -87,7 +87,7 @@
               <span class="label label-danger pull-right mail-danger" id="warn" style="display: none"></span>
               </a>
             <ul class="sub">
-              <li class="{% if request.resolver_match.view_name ==  'manageItems'%}active{% endif %}"><a href="{% url 'manageItems' %}">Products</a></li>
+              <li class="{% if request.resolver_match.view_name ==  'manageItems'%}active{% endif %}"><a href="{% url 'manageItems' request.session.branchID %}">Products</a></li>
               <li class="{% if request.resolver_match.view_name ==  'manageIngredients'%}active{% endif %}"><a href="{% url 'manageIngredients' 0 %}">Ingredients</a></li>
             </ul>
           </li>
@@ -137,7 +137,7 @@
                item +='<br><span class="small italic">'+obj[i].timestamp+'</span></a></li>';
                $("#notif_list").append(item);
            }
-               $("#notif_list").append('<li><a href="index.html#">See all notifications</a></li>');
+               $("#notif_list").append('<li><a href="salikneta/notifications/">See all notifications</a></li>');
 
         });
     }
