--- a/salikneta/templates/salikneta/reports/inventory_report_detail.html
+++ b/salikneta/templates/salikneta/reports/inventory_report_detail.html
@@ -19,8 +19,8 @@
                 <div class="row">
                         <h4 class="mb"><i class="fa fa-angle-right"></i> Inventory Audit Report -</h4>
                         <h5>{{ gen_info.message }}</h5>
-                        <h5>Total Deliveries: {{ gen_info.total_deliveries }}</h5>
                         <h5>Total Backloads: {{ gen_info.total_backloads }}</h5>
+                        <h5>Total Transfered In: {{ gen_info.transfer_in }}</h5>
                         <h5>Total Transfered Out: {{ gen_info.transfer_out }}</h5>
                         <h5>Total Sales Count: {{ gen_info.total_sales_ct }}</h5>
                 </div>
@@ -46,7 +46,7 @@
                       <th>Price</th>
                       <th>UOM</th>
                       <th>Beginning Inventory</th>
-                      <th>Deliveries</th>
+                      <th>Transfered In</th>
                       <th>Transfered Out</th>
                       <th>Backloads</th>
                       <th>Sales</th>
@@ -60,7 +60,7 @@
                         <td class="cell_bdr" style="border: 1px solid black">{{ r.unit_price }}</td>
                         <td class="cell_bdr txt_al_center" style="border: 1px solid black">{{ r.uom }}</td>
                         <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.beg_inv }}</td>
-                        <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.deliveries }}</td>
+                        <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.transfer_in }}</td>
                         <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.transfer_out }}</td>
                         <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.returns }}</td>
                         <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.sales }}</td>
