--- a/salikneta/templates/salikneta/forecasting.html
+++ b/salikneta/templates/salikneta/forecasting.html
@@ -46,6 +46,7 @@
                     <tr>
                       <th>Product</th>
                       <th>Description</th>
+                      <th>UOM</th>
                       <th>Marketing Branch</th>
                       <th>Taft Branch</th>
                       <th>Malabon Branch</th>
@@ -58,6 +59,7 @@
                       <tr>
                         <td class="cell_bdr">{{ r.product }}</td>
                         <td class="cell_bdr">{{ r.description }}</td>
+                        <td class="cell_bdr">{{ r.uom }}</td>
                         <td class="cell_bdr txt_al_right">{{ r.marketing_branch }}</td>
                         <td class="cell_bdr txt_al_right">{{ r.taft_branch }}</td>
                         <td class="cell_bdr txt_al_right">{{ r.malabon_branch }}</td>
