--- a/salikneta/templates/salikneta/purchaseOrder.html
+++ b/salikneta/templates/salikneta/purchaseOrder.html
@@ -124,10 +124,7 @@
                                           <td>{{ o.idRawMaterial.name }}</td>
                                           <td>{{ o.qty }}</td>
                                           <td>{{ o.get_pending }}</td>
-
                                         </tr>
-                                       
-
                                         {% endfor %}
 
                                       </tbody>
@@ -184,7 +181,9 @@
                 </table>
                 <script>
                     $(document).ready(function() {
-                        $('#cat_tbl').DataTable();
+                        $('#cat_tbl').DataTable({
+                            "order": [[ 0, "desc" ]]
+                        });
                         var today = new Date();
                         var dd = String(today.getDate()).padStart(2, '0');
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
