--- a/salikneta/templates/salikneta/manageItems.html
+++ b/salikneta/templates/salikneta/manageItems.html
@@ -221,7 +221,7 @@
                                   <td bgcolor="lightcoral">{{product.idCategory.name}}</td>
                                   <td bgcolor="lightcoral">{{product.suggestedUnitPrice}} <a href="#" data-toggle="modal" data-target="#modal_edit" item_code="{{ product.get_product_code }}" item_name="{{ product.name }}" item_price="{{ product.suggestedUnitPrice }}" item_id="{{ product.idProduct }}" onclick="editItem_Price(this)"><i class="fa fa-edit"></i></a></td>
                                   <td bgcolor="lightcoral">
-                                      {{product.unitsInStock}}<br>
+                                      {{product.unitsInStock|floatformat:2}}<br>
                                       <span class="label">LOW STOCK</span>
                                   </td>
                                   <td bgcolor="lightcoral">{{product.unitOfMeasure}}</td>
@@ -234,7 +234,7 @@
                                   <td>{{ product.description }}</td>
                                   <td>{{product.idCategory.name}}</td>
                                   <td>{{product.suggestedUnitPrice}} <a href="#" data-toggle="modal" data-target="#modal_edit" item_code="{{ product.get_product_code }}" item_name="{{ product.name }}" item_price="{{ product.suggestedUnitPrice }}" item_id="{{ product.idProduct }}" onclick="editItem_Price(this)"><i class="fa fa-edit"></i></a></td>
-                                  <td>{{product.unitsInStock}}</td>
+                                  <td>{{product.unitsInStock|floatformat:2}}</td>
                                   <td>{{product.unitOfMeasure}}</td>
                                   <td>{{product.reorderLevel}}</td>
                                   <td><button class="btn btn-round btn-primary" data-toggle="modal" data-target="#modal_ingredients" item_id="{{ product.idProduct }}" onclick="getIngredients(this)">View</button>
