--- a/salikneta/templates/salikneta/produceItems.html
+++ b/salikneta/templates/salikneta/produceItems.html
@@ -15,8 +15,8 @@
         <div class="row mt">
           <div class="col-lg-12">
             <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-angle-right"></i> Produce Items</h4>
-              <h5 class="mb">Select an Item</h5>
+              <h4 class="mb"><i class="fa fa-angle-right"></i> Produce Products</h4>
+              <h5 class="mb">Select a Product</h5>
               <select  class="form-control" name="products" id="products">
                     <option value="0"></option>
                     {% for product in products %}
