--- a/salikneta/templates/salikneta/reports/sales_report_detail.html
+++ b/salikneta/templates/salikneta/reports/sales_report_detail.html
@@ -20,8 +20,8 @@
                 <div class="row">
                     <h4 class="mb"><i class="fa fa-angle-right"></i> Item Sales Report -</h4>
                     <h5>{{ gen_info.message }}</h5>
-                    <h5>Total Item Sold: {{ gen_info.total_qty }}</h5>
-                    <h5>Total Sales: {{ gen_info.total_sales }}</h5>
+                    <!--<h5>Total Item Sold: {{ gen_info.total_qty|floatformat:2 }}</h5> -->
+                    <h5>Total Sales: {{ gen_info.total_sales|floatformat:2 }}</h5>
                 </div>
             <style>
               .bdr{
@@ -53,7 +53,7 @@
                       <tr>
                         <td class="cell_bdr">{{ r.product }}</td>
                         <td class="cell_bdr">{{ r.description }}</td>
-                        <td class="cell_bdr txt_al_right">{{ r.total_qty }}</td>
+                        <td class="cell_bdr txt_al_right">{{ r.total_qty }} {{ r.uom }}</td>
                         <td class="cell_bdr txt_al_right">{{ r.total_value }}</td>
                         <td class="cell_bdr txt_al_right">{{ r.sold_value }}</td>
                       </tr>
