--- a/salikneta/templates/salikneta/transferOrderProducts.html
+++ b/salikneta/templates/salikneta/transferOrderProducts.html
@@ -119,7 +119,7 @@
 
                                       <thead>
                                         <tr >
-                                          <th width="50%" style="text-align: center;">Item name</th>
+                                          <th width="50%" style="text-align: center;">Product name</th>
                                           <th width="50%" style="text-align: center;">Qty to be transferred</th>
 
                                         </tr>
@@ -169,7 +169,9 @@
                 </table>
                 <script>
                     $(document).ready(function() {
-                        $('#cat_tbl').DataTable();
+                        $('#cat_tbl').DataTable({
+                            "order": [[ 0, "desc" ]]
+                        });
                         var today = new Date();
                         var dd = String(today.getDate()).padStart(2, '0');
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
@@ -259,7 +261,7 @@ s
                           <br>
                           <div class="row">
                             <div class="col-md-12">
-                              <h4>Items</h4>  
+                              <h4>Products</h4>
                             </div>
 
                             
@@ -269,8 +271,8 @@ s
                               <table class="table table-hover"> 
                                 <thead>
                                   <tr>
-                                    <th>Item name</th>
-                                    <th>In stock</th>
+                                    <th>Product name</th>
+                                    <th>Products In stock</th>
 
                                     <th>Quantity</th>
                                   </tr>
@@ -478,7 +480,7 @@ function finishTO(id){
 
     
       $.ajax({
-      url: '{% url "ajaxGetInStock" %}',
+      url: '{% url "ajaxGetInStockProduct" %}',
       data: {
         "idProduct":dropdown.value,
       },
